<resources>
    <string name="app_name">Lab04</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_contact">Add contact</string>
    <string name="take_photo">Take photo</string>
    <string name="contacts">Contacts</string>
    <string name="message_action_success">Success operation!</string>
    <string name="warning_action_canceled">Action was canceled.</string>
    <string name="warning_empty_data_list">Ohh, your data list is empty!</string>
    <string name="error_empty_name">Your name is empty!</string>
    <string name="error_empty_phone">Your phone is empty!</string>
    <string name="error_empty_email">Your e-mail is empty!</string>
    <string name="error_activity_no_found">Can\'t perform action! Not found relative app.</string>
    <string name="error_something_went_wrong">Error! Something went wrong…</string>
    <string name="item_was_removed">Item was removed</string>
    <string name="wintersun">Wintersun</string>
    <string name="insomnium">Insomnium</string>
    <string name="be_lakor">Be\'lakor</string>
    <string name="error_failed_load_image">Image not loaded! There was an some error…</string>
</resources>